1 more quick solution update

--- a/TinyORM/TinyORM.csproj
+++ b/TinyORM/TinyORM.csproj
@@ -73,7 +73,9 @@
     <EmbeddedResource Include="SQLScripts\CreateDatabase.sql" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="README" />
+    <None Include="..\README">
+      <Link>README</Link>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
